[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "absent-slacker-catchup"
version = "0.1.0"
description = "A command line tool for absent slacker catchup"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
asc = "asc.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/absent-slacker-catchup"
Repository = "https://github.com/yourusername/absent-slacker-catchup"
Issues = "https://github.com/yourusername/absent-slacker-catchup/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["asc*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=asc --cov-report=term-missing" 